--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.6",
-    "morgan": "^1.9.1",
-    "pg": "^7.4.3"
+    "morgan": "^1.9.1"
+
   },
   "devDependencies": {
     "chai": "^4.1.2",
