--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.6.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
-    "morgan": "^1.9.1"
-
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
